updates titles in tabs

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -1,7 +1,7 @@
 /*=================================================
 // Style
 // 
-// @package chop
+// @package swt
 // @author Adveits <support@adveits.com>
 // @version 1.2.0
 =================================================*/
